        - Split view into HTML and vCard content types
        - Convert controllers to Chained actions
        - Remove ugly uri_for override
        - Move address-related packages out of the ::Entry namespace
        - Add address inflation for 'Emergency Contact Mailing
          Address'
        - Convert to Class::Accessor::Fast
        - 404 on invalid source in Controller::Search
        - Add SASL-based REMOTE_USER LDAP connection class for
          authenticated phonebook

0.19  Tue Nov 28 16:00:51 EST 2006
        - Cleanup {encode,decode}_ufid
        - Display "One hundred results are displayed below" instead of
          "the first 100 entries" when sizelimit is reached
        - Phonebook::Controller::People: Use get_url_args instead of
          hard coding use of uflEduUniversityId
        - Use uflEduPsDeptId instead of uflEduUniversityId for units,
          since that's now part of the DN
        - When searching for people in a unit, and only one person
          exists in the unit, redirect correctly to that person
        - Add trailing slash via uri_for instead of in HTML
        - Redirect unit URLs using the department UFID to the
          corresponding URL using the PeopleSoft department ID

0.18  Tue Aug  1 17:49:04 EDT 2006
        - Fix searches which include a middle name
        - Display title and unit for students
        - 404 on an invalid ACTION in /people/ENCODED_UFID/ACTION/
        - 404 on /people/UFID/
        - Remove vCard view; instead use a new TT wrapper
        - Improve URL generation in Phonebook::Controller::Search
        - Redirect from /people/ and /units/ to /
        - Refactor old application redirect handling into
          Phonebook::Controller::People
        - Hide unit if person is in REGISTRAR STUDENTS
        - Change "people in unit" URLs to be /units/UFID/people/
          instead of /people/unit/UFID/
        - Fix query tokenization to parse "last,first m" into (last
          first m)
