@@ -3,6 +3,8 @@ package UFL::Phonebook::Model::Person;
 use strict;
 use warnings;
 use base qw/Catalyst::Model::LDAP/;
+use Class::C3;
+use Scalar::Util qw/weaken/;
 
 =head1 NAME
 
@@ -15,6 +17,24 @@ See L<UFL::Phonebook>.
 =head1 DESCRIPTION
 
 Catalyst model component for L<UFL::Phonebook>.
+
+=head1 METHODS
+
+=head2 ACCEPT_CONTEXT
+
+Store the current user for L<UFL::Phonebook::LDAP::Connection/bind>.
+
+=cut
+
+sub ACCEPT_CONTEXT {
+    my $self = shift;
+    my $c = $_[0];
+
+    $self->{catalyst_user} = $c->user;
+    weaken($self->{catalyst_user});
+
+    $self->next::method(@_);
+}
 
 =head1 AUTHOR
 
